ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synthia-ingress
  namespace: synthia-flux
spec:
  ingressClassName: nginx
  rules:
    - host: umatch.mobility.siemens.com 
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: synthia-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synthia-frontend
                port:
                  number: 3000
    
  tls:
    - secretName: synthia-tls
      hosts:
        - umatch.mobility.siemens.com
